Added dynamic pricing
